<resources>
    <string name="up_ftp_data_load">Заказы удачно выгруженны на сервер!</string>
    <string name="up_ftp_data_status">Успешное обновление</string>
    <string name="up_ftp_data_error">Ошибка загрузки данных с FTP</string>
    <string name="Name_PO_1">MobiTrade</string>
    <string name="Name_PO_2">MobiTrade</string>
    <string name="Mycolors">#FFA000</string>
    <string name="firma_name">Номенклатура</string>
    <string name="firma_title">Наша компания предлагает большой ассортимент товара, в разном ценовом сегменте и  от производителей разных стран.</string>
    <string name="header_bella_title_1">В гармонии с природой.\nВ гармонии с собой.</string>
    <string name="header_bella_title_2">Линейка гигиенических изделий для женщин, которая занимает лидирующие позиции на рынках Центральной, Восточной и Западной Европы, а также Азии.</string>
    <string name="header_viero_title_1">Гигиеническая продукция из высококачественной бумаги</string>
    <string name="header_viero_title_2">Бренд ассоциируется со свежестью, здоровьем, чистотой и заботой и ассоциируется мягким, пушистым и дружелюбным кроликом.</string>
    <string name="header_yokosun_title_1">Японское качество по доступной цене</string>
    <string name="header_yokosun_title_2">Современное оборудование, высококачественные материалы, применяемые при производстве, делают качество нашей продукции очень высоким!</string>
    <string name="header_president_title_1">«Мы создаем продукты, которые используем сами»</string>
    <string name="header_president_title_2">Каждый завод, участвующий в производстве продуктов PRESIDENT,
        работает по стандартам фармацевтического производства, что гарантирует контроль качества на каждой стадии создания.</string>
    <string name="header_cussons_title_1">Мы думаем о каждом клиенте.</string>
    <string name="header_cussons_title_2">Линейка суперконцетрированых средств для посуды и стирки, а также косметика для тела. </string>
    <string name="header_pcc_title_1">Нашим источником вдохновения является весь мир.</string>
    <string name="header_pcc_title_2">Один из крупнейших польских производителей товаров бытовой химии, профессиональной химии и косметики. </string>
    <string name="header_samarela_title_1"> Качество. Прочность. \nМногофункциональность. </string>
    <string name="header_samarela_title_2">
        Губки – все, что потребуется для превращения утомительных домашних забот в праздник чистоты и порядка.
        Изделия помогут сделать рутинные занятия более комфортными и быстрыми, поэтому популярны среди покупателей всех категорий.
    </string>
    <string name="header_sofidel_title_1"> Качество, Безопасность, Инновация, Благополучие </string>
    <string name="header_sofidel_title_2">
        Каждый продукт Sofidel выражает стратегию группы, которая создает инновации,
        безопасность и внимание к здоровью, личному благополучию
        и защите окружающей среды.
    </string>
    <string name="header_splat_title_1"> Мы создаём продукты, у которых нет аналогов в мире </string>
    <string name="header_splat_title_2">
        SPLAT — ведущий разработчик и производитель профессиональных решений
        в категориях ухода за полостью рта, бытовой не химии и детской косметики.
    </string>
    <string name="header_pkf_title_1"> Больше, \nчем просто чистота </string>
    <string name="header_pkf_title_2">
        СОНЦА — это современное, динамично развивающееся предприятие,
        выпускающее средства для стирки, продукты бытовой химии и личной гигиены.
    </string>
    <string name="header_rens_title_1"> Широкий ассортимент,\nИндивидуальный подход </string>
    <string name="header_rens_title_2">
        Ренессанс-Косметик — является одной из крупнейших компаний по производству
        бытовой химии и косметики за Уралом и выпускает более 700 SKU продукции.
    </string>
    <string name="header_dramers_title_1"> Качество и \n экологическая политика </string>
    <string name="header_dramers_title_2">
        Dramers — поставка высококачественных парфюмерно-косметических продуктов,
        косметики для укладки волос, а также бытовой химии на базе современных,
        эффективных и безопасных формул, отвечающих требованиям потребителей.
    </string>
    <string name="header_zonin_title_1"> Открой для себя уникальность вина</string>
    <string name="header_zonin_title_2">
        Borgo SanLeo - это бренд, позволяющий попробовать уникальность итальянских вин,
        предлагающий широкий выбор из лучших винодельческих регионов Италии, от Фриули до Сицилии.
    </string>
    <string name="header_sea_title_1"> Рыбные консервы со 100% качеством</string>
    <string name="header_sea_title_2">
        ТД "Морское Содружество" - производитель и поставщик рыбной консервации
        под собственными торговыми марками - "Ультрамарин" и "ТД "Морское Содружество".
    </string>
    <string name="header_sarantis_title_1">Наша сила-\nв наших брендах.</string>
    <string name="header_sarantis_title_2">Sarantis Group насчитывает более 100 признанных брендов высокого
        качества в секторе товаров для дома, элитной косметики , бытовой химии , товаров  личной гигиены, а также профессиональных товаров.

    </string>
    <string name="header_balt_et_title_1"> Мы \nЛюбим Когда Вкусно...</string>
    <string name="header_balt_et_title_2">
        Мясоконсервный комбинат "Балтийский" - наше предприятие производит качественную
        продукцию, отвечающую всем государственным нормативам и проходит обязательную сертификацию ЕАС.\n
         Продукции выпускается в качестве ПРЕМИУМ и СУПЕР-ПРЕМИУМ.
    </string>
    <string name="header_cottonclub_title_1">Cotton Club</string>
    <string name="header_cottonclub_title_2">ведущий производитель ватной продукции и средств гигиены с собственными производственными мощностями на территории РФ.</string>
    <string name="header_ufapack_title_1">Ufapack</string>
    <string name="header_ufapack_title_2">Выпускаем и реализуем по низким ценам пакеты для продуктов и мусорные, губки, салфетки и многие другие товары.</string>
    <string name="header_ontex_title_1">Canped&amp;Canbebe</string>
    <string name="header_ontex_title_2">является самой популярной маркой подгузников в Турции, предлагает самый большой ассортимент продукции.</string>
    <string name="header_halk_title_1">«Халк Хиджйеник»</string>
    <string name="header_halk_title_2">сильная турецкая компания, которая добилась и продолжает добиваться значительных успехов, конкурируя с мировыми гигантами за рубежом.</string>
    <string name="header_big_title_1">КАЧЕСТВО ПРОДУКЦИИ ГАРАНТИРОВАННО</string>
    <string name="header_big_title_2">Компания выпускает весь спектр косметических средств и является экспертом в области красителей для волос, оттеночных средств, кремовой группы.</string>
    <string name="header_nauka_title_1"> "Наука Техника Медицина"</string>
    <string name="header_nauka_title_2">Эксперты в категории продукции Oral Care c 1990 г.</string>
    <string name="header_balt_et_title_3">
        Мясоконсервный комбинат "Балтийский" - наше предприятие производит качественную
        продукцию, отвечающую всем государственным нормативам и проходит обязательную сертификацию ЕАС.
        Ассортимент богат разными видами тушенки - СВИНИНОЙ, ГОВЯДИНОЙ, мясом КУР, ВЕТЧИНОЙ,
        мяса ГУСЯ, УТКИ, ОЛЕНИНЫ, БАРАНИНЫ, КОНИНЫ и прочих.\nПродукции выпускается в качестве ПРЕМИУМ и СУПЕР-ПРЕМИУМ.
    </string>
    <string name="header_scan_title_1"> «Опытный завод «НИВА»</string>
    <string name="header_scan_title_2">
        Водка производится по скандинавской технологии. Ее отличают нестандартная рецептура, а также специальный экофильтр,
        содержащий наносорбент в колпачке. Благодаря этому водка Скандинавия получается такая чистая и мягкая.
    </string>
    <string name="header_ba_title_1">Мы заботимся о наших покупателях и предлагаем им максимально
        полезную, натуральную и безопасную косметику по доступным ценам.</string>
    <string name="header_ba_title_2">«Рецепты бабушки Агафьи» - это натуральные косметические средства на основе
        экстрактов и масел сибирских трав, созданные по уникальным рецептам травницы Агафьи Тихоновны Ермаковой.</string>
    <string name="header_siberica_title_1">Natura Siberica - первый российский бренд качественной органической косметики</string>
    <string name="header_siberica_title_2"> В каждую баночку крема или любого другого средства Natura Siberica мы добавляем уникальные ингредиенты,
        которые помогают сохранить Вашу молодость и красоту</string>
    <string name="header_vostok_title_1">Компания "РЕГИОН" - Производство и поставка подсолнечного масла и жмыха.</string>
    <string name="header_vostok_title_2">Основана в 2000 году, как предприятие,
        ведущее производственную и торговую деятельность.
        Заслужила безупречную репутацию производителя только высококачественной продукции,
        завоевала доверие потребителей и партнеров по бизнесу.</string>
    <string name="header_villa_krim_title_1">Villa Krim - Особенное для особенных.</string>
    <string name="header_villa_krim_title_2">
        Это эксклюзивные купажные («Шато Барон», «Шевалье Руж») и яркие сортовые вина.
        Их рецептуры разработаны при участии европейских виноделов, которым удалось найти
        особый подход и стиль при создании вин. Использование всемирных сортов винограда
        («саперави», «мерло», «каберне», «шардоне»),которые отличаются высоким качеством и
        неповторимостью вкусовых свойств.
    </string>
    <string name="header_one_work">Производство косметики на основе натуральных трав и растений</string>
    <string name="header_one_work_2">Мы заботимся о наших покупателях и предлагаем им максимально
        полезную, натуральную и безопасную косметику по доступным ценам.</string>
    <string name="header_svoboda_title_1"> Гармония\nкрасоты и здоровья</string>
    <string name="name_pref_params_title_1">ТУ для всех брендов</string>
    <string name="name_pref_params_pros_1">ТУ (нал.)</string>
    <string name="name_pref_params_pros_2">ТУ (конс.)</string>
    <string name="wt_text_line_2">Справочники</string>
    <string name="wt_text_line_1">Общий журнал</string>
    <string name="wt_text_line_3">Прочее</string>
    <string name="wt_text_line_4">Обработки</string>
    <string name="wt_text_line1_forma">Форма заказа</string>
    <string name="wt_text_line1_kassa">Касса</string>
    <string name="wt_text_line1_otchet">Отчеты</string>
    <string name="wt_text_line1_ostatki">Остатки</string>
    <string name="wt_text_line2_agents">Агенты</string>
    <string name="wt_text_line2_nomenkl">Номенклатура</string>
    <string name="wt_text_line2_kontragent">Контрагенты</string>
    <string name="wt_text_line3_kupurnic">Купюрник</string>
    <string name="wt_text_line3_shtrih">Штрих-код</string>
    <string name="wt_text_line4_update">Обновить</string>
    <string name="wt_text_line4_sync">Синхронизировать</string>
    <string name="wt_bt_forma">форма заказа</string>
    <string name="wt_bt_kassa">касса, консигнации</string>
    <string name="wt_bt_otchet">отчеты по продажам</string>
    <string name="wt_bt_ostatki">остатки по фирме</string>
    <string name="wt_bt_kontragent">контрагенты</string>
    <string name="wt_bt_nomenkl">номенклатура товара</string>
    <string name="wt_bt_agent">агенты</string>
    <string name="wt_bt_list">купюрник</string>
    <string name="wt_bt_shtrih">поиск по штрих-коду</string>
    <string name="wt_bt_update">обновление данных</string>
    <string name="wt_bt_sync">синхронизация данных</string>
    <string name="wt_bt_load">База данных</string>
    <string name="menu_item_filters_clients">фильтр: по контрагенту</string>
    <string name="menu_item_filters_date">фильтр: по дате</string>
    <string name="menu_item_filters_clear">удалить фильтр</string>
    <string name="menu_item_filters_group">Сгрупировать</string>
</resources>