<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@mipmap/icon_filters"
        android:title=""
        app:showAsAction="always">
        <menu android:id="@+id/menu_filters">
            <item
                app:showAsAction="ifRoom"
                android:checkable="false"
                android:id="@+id/menu_filter_toGroup"
                android:icon="@mipmap/icon_filter_group"
                android:title="@string/menu_item_filters_group" />
            <item
                app:showAsAction="ifRoom"
                android:id="@+id/menu_filter_toDate"
                android:icon="@mipmap/icon_filters_date"
                android:title="@string/menu_item_filters_date" />
            <item
                app:showAsAction="ifRoom"
                android:id="@+id/menu_filter_toClietns"
                android:icon="@mipmap/icon_filters_clients"
                android:title="@string/menu_item_filters_clients" />
            <item
                app:showAsAction="ifRoom"
                android:id="@+id/menu_filter_toClear"
                android:icon="@mipmap/icon_filters_clear"
                android:title="@string/menu_item_filters_clear" />
        </menu>
    </item>
</menu>
